--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "concurrently": "^3.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "electron": "^2.0.5",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "wait-on": "^2.1.0"
   },
-  "main": "main.js",
+  "main": "src/main.js",
+  "homepage": "./",
   "scripts": {
-    "start": "react-scripts start",
+    "react-start": "react-scripts start",
+    "electron-start": "electron .",
+    "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && npm run electron-start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron": "electron ."
+    "electron": "electron .",
+    "electron-dev": "set ELECTRON_START_URL=http://localhost:3000 && electron ."
   },
   "devDependencies": {
     "electron": "^2.0.5"
