--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "chokidar": "^2.0.4",
     "concurrently": "^3.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
